[package]
name = "rust-client"
version = "0.4.1"
edition = "2018"

[features]
devnet = []

[dependencies]
anchor-lang = {version = "0.25.0"}
anchor-spl = {version = "0.25.0"}
anchor-client = {version = "0.25.0"}
anyhow = "1.0"
clap = {version = "3.0.10", features=["derive"]}
mercurial-vault = { version="0.4.4", features= ["cpi", "devnet"] }
affiliate =  { path = "../programs/affiliate", features = ["cpi"] }
solana-program = "1.9.17"
solana-sdk = "1.9.17"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
shellexpand = "2.1.0"
spl-associated-token-account = { version = "1.0.2", features = ["no-entrypoint"] }
rust_decimal="1.20.0"
port-variable-rate-lending-instructions = "0.3.0"
solend-program = { git="https://github.com/mercurial-finance/solana-program-library", rev ="68f815523377428f29cb6db1803f1d5de509ea5f", features = [ "no-entrypoint" ]  }
bincode = "^1.3.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json="1.0.85"
serde = { version = "1.0.104", features = ["derive"] }
hyper-tls="0.5.0"
switchboard-utils = "=0.1.32"
