[package]
name = "rust-client"
version = "0.4.2"
edition = "2018"

[features]
devnet = []

[dependencies]
anchor-lang = {version = "0.28.0"}
anchor-spl = {version = "0.28.0"}
anchor-client = {version = "0.28.0", features=["async"]}
anyhow = "1.0"
clap = {version = "3.0.10", features=["derive"]}
mercurial-vault = { git = "https://github.com/mercurial-finance/vault-sdk", rev="b8c4e9f2b6ef28550a2145e11dc68a7cdf953c0d", features = ["cpi"] }
affiliate =  { path = "../programs/affiliate"}
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
shellexpand = "2.1.0"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
rust_decimal="1.20.0"
port-variable-rate-lending-instructions = "0.3.0"
solend-program = { git="https://github.com/mercurial-finance/solana-program-library", rev="bff3df14cab2dba01dce044bb6cfc0aa86ff45c3", features = [ "no-entrypoint" ] }
bincode = "^1.3.1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde_json="1.0.85"
serde = { version = "1.0.104", features = ["derive"] }
hyper-tls="0.5.0"
solana-program = "1.16.12"
solana-sdk = "1.16.12"
async-trait="0.1.52"
